<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimeCat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_new">New</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_accept">Accept</string>
    <string name="action_group">Group</string>
    <string name="can_not_find_version_name">Can not find version name</string>

    <string-array name="Mode_array">
        <item>Active Tasks</item>
        <item>Completed Tasks</item>
        <item>Custom Lists</item>
        <item>Statistics</item>
        <item>Settings</item>
        <item>Help</item>
        <item>About</item>
        <item>Exit</item>
    </string-array>
    
    <string-array name="orderBy">
        <item>Priority</item>
        <item>State</item>
        <item>Task name</item>
        <item>Add time</item>
    </string-array>
    
    <string-array name="State">
        <item>Any</item>
        <item>ACTIVE</item>
        <item>EXPIRED</item>
        <item>COMPLETED</item>     
    </string-array>
    
    <string-array name="Importance">
        <item>Any</item>
        <item>LOW</item>
        <item>MODERATE</item>
        <item>IMPORTANT</item>  
        <item>CRUCIAL</item>   
    </string-array>
    

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="help_list">There are two lists of tasks, active and completed. 
The active tasks can be expired if the current time is after the deadline, 
or current if the deadline is in the future. 

Tasks are represented in a list by the name and an information field.
The information field lists the remaining time until the deadline for the
active tasks, the expiration time for the expired tasks, 
{Todo: and the completion time for the completed tasks}.

{Todo: The order of the tasks in the completed list is given 
by completion time.}

The order of the tasks in the active list is given by a score determined
by the priority of the task and what percentage of the total time remains 
until the deadline (if any deadline). (check if true!!)
{ToDo: Figure out the formula}

Add a new task:
Touching the + icon on the top bar creates a new task with the 
default priority (1000) and opens the "edit" screen for it.
The menu generated by a long touch on an existing task allows
to generate a new task with a higher priority than the current one.

"edit" an existing task:
Touching the task in any list opens the "edit" screen.

Delete a task:
Swiping right to left over a task shows a quick delete button.
{ToDo: cancel the delete button}
Deleted tasks cannot be recovered.
Another way to delete the task is using the menu generated by
a long touch.

Move a task:
Swiping left to right over a task moves it between the two lists, 
active and completed. 
Alternatively, the task can be marked as completed or active 
from the "edit" screen.
Another way to move the task between lists is using the menu generated by
a long touch.

Reorder tasks:
Tasks can be reordered by changing the priority or the deadline
in the "edit" screen.
{ToDo: Tasks can be reordered by dragging them vertically in the list.}

Block operations:
By using the {cloud} icon, tasks can be selected to perform block operations 
like deletion, {ToDo: move between lists, cancel the block mode}</string>
    <string name="help_settings">{ToDo: remember last choices in statistics - on/off}</string>
    <string name="help_stats">Statistics can be obtained based on the tags of the tasks.
Both active and completed lists are used for statistics.

Task selection:
Tasks participated in statistics are selected by tag,
by start time, and by end time (compared with creation time)
{check if true}
By default, start time is the earliest time in the lists, 
the end time is the current moment, 
{ToDo: and all tags are selected}

Statistics listed:
By touching the {check} button,
the results are listed numerically, as percentages, and as pie charts.
Classification can be done by importance, 
{ToDo: by state, and by tag.} </string>
    <string name="help_task">	    
       Task details can be visualized or edited from this screen.

Description: short description of the task.
Mandatory. Default: none. Filter {ToDo} 

Details: {ToDo: field pointing to a file name}
Optional.

State: State of the task reflecting the list (active or completed) and
the deadline (active or expired). 
Active means the task is in the active list and the deadline is still in the future.
Expired means the task is in the active list but the deadline is in the past. 
Completed means the task is in the completed list.
Default: expired.

Importance: Field that can rate the importance of the task.
{ToDo: it reflects the default priority and it can be used for statistics.}
Values can be: low, moderate, important, crucial.
Default: moderate

Deadline: The deadline of the task; used to decide the state of the task 
(active vs. expired) and to order th tasks in the active list.
Default: current time

Start: Start time of the task. Used for including tasks in statistics 
{ and for including tasks in the active list -- check if true}.
Default: current time

Remaining: Time until completion in percentage and absolute value.
By changing it {what happens?}

Priority: The numeric priority that influences the order of tasks 
in the active list. 
Range: 0-9999
Default - depending on importance: 1000 for moderate
{ToDo: 0 for low; 5000 for important; 9000 for crucial}
{Change priority when Importance changes only if its default priority for that level}

Tags: Strings used for statistics.
Must press Space after each tag to enter it {check what happens otherwise}
Optional.
Filter: alphanumerics, no spaces or symbols, space is separator.</string>

</resources>