<menu 
    
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="100"
        android:showAsAction="always"/>
    
    <item 
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="4"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"/>
    
    
    <item 
        android:id="@+id/action_new"
        android:title="@string/action_new"
        android:orderInCategory="2"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"/>
    
    <item 
        android:id="@+id/action_accept"
        android:title="@string/action_accept"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_accept"
        android:showAsAction="ifRoom"
        android:visible="false"/>
    
    <item 
        android:id="@+id/action_group"
        android:title="@string/action_group"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_group_w"
        android:showAsAction="ifRoom"
        android:visible="true"/>

</menu>
